--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   decimal: ^2.2.0
   riverpod: ^1.0.3
   http: ^0.13.4
+  flutter_riverpod: ^1.0.3
 
 dev_dependencies:
   flutter_test:
