--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   riverpod: ^1.0.3
   http: ^0.13.4
   flutter_riverpod: ^1.0.3
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
